# social-media-sdk

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
core/: __init__.py  config.py  http_client.py  proxy.py  rate_limiter.py  retry.py
docs/: architecture.md  core-components.md  data-models.md  extending.md  getting-started.md  instagram-guide.md  tiktok-guide.md  youtube-guide.md
examples/: example_usage.py
models/: __init__.py  content.py  profile.py
